--- a/style.css
+++ b/style.css
@@ -5,20 +5,19 @@
 	box-sizing: border-box;
 }
 body{
-	background-color: #CC0000;
 	height: 100vh;
-	display: flex;
+	overflow: hidden;
 }
 
 /* MODIFYING BODY ELEMENTS */
 #theCanvas{
 	border: 2px solid black;
+	width: 100vw;
+	height: 100vh;
 	background-image: url("grass-lawn-abstract-seamless-background-game-asset-pattern-natural-field-herbs-top-view_191307-627.avif");
-	margin: auto;
-	width: 90%;
 	
 }
-.score{
+#score{
 	position: absolute;
 	font-family: Bold;
 	font-size: 30px;
@@ -28,42 +27,91 @@ body{
 	left: 10px;
 }
 
-#highScore{
+#highScore {
 	position: absolute;
 	font-family: Bold;
 	font-size: 30px;
 	color: white;
 	height: 30px;
-	right: 10px;
 	top: 10px;
+	right: 10px;
 }
-/* MENU APPEARED AFTER LOSING */
 
-.menu {
+#snake {
+	position: absolute;
+	width: 30px;
+	height: 30px;
 	background-color: black;
-	width: 300px;
-	height: 350px;
-	position: fixed;    
-	bottom: -400px;
-	border: 0px;
+	left: 40%;
+	top: 50%;
+	border-radius: 50%;
 }
-#gameOver{
-	width: 300px;
-	height: 150px;
-	position: fixed;
-	line-height: 150px;
-	text-align: center;
-	bottom: -400px;
+
+.squares {
+	position: absolute;
+	width: 30px;
+	height: 30px;
+	background-color: brown;
+	top: 50%;
+	border-radius: 50%;
+}
+
+#apple {
+	position: absolute;
+	width: 50px;
+	height: 50px;
+}
+
+/* MENU PAGE */
+
+#menuBody {
+	background: rgb(16,28,187);
+	background: linear-gradient(0deg, rgba(16,28,187,1) 0%, rgba(0,0,0,1) 87%);
+	display: flex;
+	flex-flow: column nowrap;
+	justify-content: space-evenly;
+	align-items: center;
+}
+
+#gameOver { 
 	color: white;
-	font-size: 50px;
 }
-#retry{
+#youLost {
+	color: #ff0000;
+}
+
+#restartButton {
+	background-color: transparent;
+	color: rgb(0, 255, 0);
+	border: 0;
+	font-size: 24px;
+}
+
+.menuText {
+	width: fit-content;
+}
+
+/* PAUSE SECTION */
+#pause {
+	position: absolute;
+	background: rgb(16,28,187);
+	background: linear-gradient(0deg, rgba(16,28,187,1) 0%, rgba(0,0,0,1) 87%);
 	width: 100%;
-	height: 100px;
-	position: relative;
-	top: calc(40% - 150px / 2 + 150px);
-	line-height: 100px;
-	text-align: center;
+	height: 100%;
+	top: 0;
+	left: 0;
+	display: none;
 	color: white;
-	font-size: 50px;
+	flex-flow: column nowrap;
+	justify-content: space-evenly;
+	text-align: center;
+}
+
+#pauseText {
+	font-size: 32px;
+	font-weight: bold;
+}
+#resumeText {
+	color: rgba(255, 255, 255, 0.816);
+	font-size: 24px;
 }
